--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -3,7 +3,7 @@
 <%=@recipe.total_price %>
 <%=@recipe.total_protien %>
 <%=@recipe.total_calories %>
-<%="Create by #{@recipe.user_id.name}"%>
+<%="Created by #{@recipe.user_id.name}"%>
 
 
 </h2>
