post lunch day 1

--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -9,7 +9,7 @@ name
 price
 <%=f.number_field :price, class: :text_field, step: :any%>
 <p>
-protien
+protein
 <%=f.number_field :protein%>
 <p>
 calories
