--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -3,29 +3,13 @@
 <%end%>
 
 
-<%=form_for @recipe do |f|%>
-<%=f.text_field :name%>
 
 
-
-
-
-<%=f.number_field :price%>
-<%=f.number_field :protein%>
-<%=f.number_field :calories%>
-GLUTEN FREE????
-<%=f.check_box :gluten%>
-<%=f.submit "create food"%>
-<%end%>
-
-
-<%=form_for @recipe, url: "/recipe_foods/create" do |f|%>
-Recipe name
-
-<%=f.collection_select :food_id, @foods, :id, :name %>
-food 2
-<%=f.collection_select :food_id, @foods, :id, :name %>
-food 3
- <%=f.collection_select :food_id, @foods, :id, :name %>
- <%=submit_tag "new recipe"%>
-<%end%>
+<%= form_for @recipe do |f| %>
+  <%= f.label "Name" %>
+  <%= f.text_field :name %>
+  <%= f.label "Description" %>
+  <%= f.text_area :description %>
+  <%= f.collection_check_boxes :food_ids, Food.all, :id, :name %>
+  <%= f.submit %>
+<% end %>
