--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -6,10 +6,10 @@
 
 
 <%= form_for @recipe do |f| %>
-  <%= f.label "Name" %>
-  <%= f.text_field :name %>
-  <%= f.label "Description" %>
-  <%= f.text_area :description %>
-  <%= f.collection_check_boxes :food_ids, Food.all, :id, :name %>
-  <%= f.submit %>
+          <p><%= f.label "Name" %>
+          <%= f.text_field :name %></p>
+        <p class="rainbow"><%= f.label "Description" %>
+        <%= f.text_area :description %><p>
+       <%= f.collection_check_boxes :food_ids, Food.all, :id, :name %>
+          <%= f.submit %>
 <% end %>
