--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,3 +1,10 @@
+<%if @recipe.gluten? %>
+<% @recipe.gluten?.each do |food|%>
+  <% @gluten_foods << food.name %>
+  <%end%>
+  <%end%>
+
+
 RECIPE NAME
 <%=@recipe.name %>
 <p>
@@ -8,11 +15,25 @@ total price
 <%="$#{@recipe.total_price.round(2)}"%>
 <P>
 total protien
-<%=@recipe.total_protein %>
+<%=@recipe.total_protein %> grams
 <P>
 total calories
 <%=@recipe.total_calories %>
+<p>
+Ingredients
+<%=@recipe.foods.map {|food| food.name}.join(", ")%>
+
+<p>
+<% if @gluten_foods.length > 0 %>
+<p class="rainbow" >   <%= "WARNING I CONTAIN GLUTEN" %>
+  <p>
+<font color="red"><%= "#{@gluten_foods.join(", ")}" %></font>
+  <%end%>
+
 <P>
+
+
+
 <%="Created by TBD"%>
 
 
@@ -20,4 +41,4 @@ total calories
 
 <h3><%= link_to "edit", "/recipes/#{@recipe.id}/edit" %></h3>
 
-<%= button_to "delete", "/recipes/#{@recipe.id}/delete",  method: :delete %>
+<%= button_to "delete", recipe_path,  method: :delete %>
