--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,15 +1,34 @@
+
+
+<center>
 <% if flash[:notice] %>
   <h3><%=flash[:notice]%></h3>
 <%end%>
 
 
+<div>
+
+
 
 
 <%= form_for @recipe do |f| %>
-          <p><%= f.label "Name" %>
-          <%= f.text_field :name %></p>
+        <%= f.label "Name" %>
+        <%= f.text_field :name %>
         <p class="rainbow"><%= f.label "Description" %>
         <%= f.text_area :description %><p>
        <%= f.collection_check_boxes :food_ids, Food.all, :id, :name %>
+       <p>
           <%= f.submit %>
 <% end %>
+
+</div>
+
+<style>
+input[type=text] {
+  border: 2px solid red;
+  border-radius: 4px;
+}
+</style>
+
+
+</center>
