--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -1,3 +1,5 @@
+<center>
+
 <% if flash[:notice] %>
   <h3><%=flash[:notice]%></h3>
 <%end%>
@@ -21,6 +23,7 @@ contains gluten?
 <%=f.submit "create food"%>
 <%end%>
 
+</center>
 
 
 <!-- <form>
