--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,44 @@
 <!DOCTYPE html>
 <html>
+
+
+<style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #3ba021;
+  border: 3px solid pink;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: yellow;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #bf59b3;
+}
+</style>
+</head>
+<body>
+
+<ul>
+  <li><a href="/welcome">Home</a></li>
+  <li><a href="/recipes">All Recipes</a></li>
+  <li><a href="/recipes/new">New Recipe</a></li>
+  <li><a href="/foods">All Ingredients</a></li>
+  <li><a href="/foods/new">Add Food</a></li>
+</ul>
+
   <head>
     <title>Food</title>
     <%= csrf_meta_tags %>
@@ -10,7 +49,9 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+
   <body>
+
     <%= yield %>
   </body>
 </html>
