--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,5 +1,7 @@
-
+<center>
 <% @recipes.each do |recipe| %>
-
-<li><%=link_to recipe.name, "/recipes/#{recipe.id}" %></li>
+<%=link_to recipe.name, "/recipes/#{recipe.id}" %>
+<p>
 <%end%>
+
+</center>
