--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,11 +16,15 @@
 
 
 
+ #locator { position: absolute; visibility: visible; left: 400px; top: 225px; }
+ #locator2 { position: absolute; visibility: visible; left: 105px; top: 150px; }
+
+
 
  body {
  background: url(/assets/background.jpeg) no-repeat center center;
  background-size: cover;
- height: 600px;}
+ height: 750px;}
 
 
 
