--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@ li a:hover {
   <li><a href="/recipes">All Recipes</a></li>
   <li><a href="/recipes/new">New Recipe</a></li>
   <li><a href="/foods">All Ingredients</a></li>
-  <li><a href="/foods/new">Add Food</a></li>
+  <li><a href="/foods/new">Add Ingredient</a></li>
 </ul>
 
   <head>
