updated schema w/ defaults

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,7 @@ li a:hover {
   <li><a href="/recipes/new">New Recipe</a></li>
   <li><a href="/foods">All Ingredients</a></li>
   <li><a href="/foods/new">Add Ingredient</a></li>
+
 </ul>
 
   <head>
@@ -54,4 +55,6 @@ li a:hover {
 
     <%= yield %>
   </body>
+  <script src="app/assets/javascripts/application.js"></script>
+
 </html>
