--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -6,18 +6,23 @@
 
 
 <div>
+<!--
 
+  -->
 
 
 <%= form_for @recipe do |f| %>
         <%= f.label "Name" %>
         <%= f.text_field :name %>
         <p><%= f.label "Description" %>
-        <%= f.text_area :description %><p>
+        <%= f.text_area :description %>
        <%= f.collection_check_boxes :food_ids, Food.all, :id, :name %>
        <p>
           <%= f.submit %>
 <% end %>
+
+<p>
+
 
 
 
