--- a/app/views/welcome.html.erb
+++ b/app/views/welcome.html.erb
@@ -12,7 +12,7 @@ h1 {
 <center>
 
 
-
+  <h3><font size="40" ><%= link_to "Log In", "/users/new" %>
 
 
 
@@ -22,7 +22,7 @@ h1 {
 <h6  class="rainbow"><font size="50">Brought to you by team</h6>
 </div>
 <div id="locator2">
-<%= image_tag "ko.png" %>>
+<%= image_tag "ko.png" %>
 </div>
 
 </center>
