--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <center>
-<div class="container">
+<div class="rainbow">
 Sign-Up
 </div>
 
@@ -8,14 +8,14 @@ Sign-Up
 <%= form_for @user do |f| %>
   <%= f.label :username %>
   <p><%= f.text_field :username %><p>
-  
+
   <%= f.label :password %>
  <p> <%= f.password_field :password %><p>
 
   <p><%= f.submit "Sign-Up"%><p><br><br>
 <% end %>
 
-  <p>Already a Member?</p>
+  Already a Member of the KOOL CLUB?
   <p><%= button_to "Login", login_path, method: :get %></p>
 
  </center>
