--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -11,6 +11,9 @@ RECIPE NAME
 <p>
 RECIPE INSTRUCTIONS
 <%=@recipe.description %>
+<p>
+RECIPE Catagory
+<%=@recipe.catagory%>
 <P>
 total price
 <%="$#{@recipe.total_price.round(2)}"%>
