--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -26,16 +26,16 @@ Ingredients
 
 <p>
 <% if @gluten_foods.length > 0 %>
-<p class="rainbow"> <%= "WARNING I CONTAIN GLUTEN" %>
-  <p>
+<p class="rainbow"> <%= "WARNING I CONTAIN GLUTEN" %></p>
 <font color="red", size=10><%= "#{@gluten_foods.join(", ")}" %></font>
-  <%end%>
+  <% end %>
+
 
 <P>
 
 
 
-<%="Created by TBD"%>
+Created by: <%= @recipe.user.first_name %>
 
 
 </h2>
