--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Sign-Up</h1>
+<h1>Update Profile</h1>
 
 <h4><%= flash[:notice] %></h4>
 
@@ -8,11 +8,8 @@
   <p><%= f.text_field :username %></p>
   <%= f.label :password %>
   <p> <%= f.password_field :password %></p>
-  <p><%= f.submit "Sign-Up"%></p>
+  <p><%= f.submit "Update Profile"%></p>
 <% end %>
 <br>
 <br>
-
-  <p>Already a Member?</p>
-  <p><%= button_to "Login", login_path, method: :get %></p>
 </div>
