--- a/app/views/welcome.html.erb
+++ b/app/views/welcome.html.erb
@@ -1,28 +1,27 @@
-
-
 <style>
-h1 {
-  text-shadow: 3px 3px pink;
-}
+  h1 {
+    text-shadow: 3px 3px pink;
+    color:rgba(100, 50, 255, .8);
+    font-family: 'Pacifico';
+    color: #fff400;
+    font-size: 50px;
+  }
 </style>
-<p>
-<h1><font color=#fff400><font size="50">Welcome to the Recipe Maker and Gluten Checker</h1>
-
 
 <center>
-
-
-
-
-
-
-<p>
+  <h1>Welcome</h1>
+  <h5><font color=#000000>This website allows users to create, edit, and browse recipes.</h5>
+  <h5>Users will also be able to categorize their recipes.</h5>
+  <h5>Not only that, but users will also be able to select</h5>
+  <h5>recipes created by all users and create a list of recipes</h5>
+  <h5>within their budget!</h5>
+</center>
 
 <div id="locator">
-<h6  class="rainbow"><font size="50">Brought to you by team</h6>
-</div>
-<div id="locator2">
-<%= image_tag "ko.png" %>>
+<h6 class="rainbow"><font size="50">Brought to you by team</h6>
 </div>
 
-</center>
+<div id="locator2">
+<%= image_tag "ko.png" %>
+</div>
+
