stablized all partner changes

--- a/app/views/welcome.html.erb
+++ b/app/views/welcome.html.erb
@@ -4,9 +4,11 @@
     color:rgba(100, 50, 255, .8);
     font-family: 'Pacifico';
     color: #fff400;
-    font-size: 50px;
+    font-size: 100px;
   }
 </style>
+<br>
+<h1><font color=#fff400>Welcome to the Recipe Maker</h1>
 
 <center>
 
@@ -19,4 +21,3 @@
 <div id="locator2">
 <%= image_tag "ko.png" %>
 </div>
-
