--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -16,7 +16,7 @@
   <%= form_for @recipe do |f| %>
   <%= f.label "Name" %>
   <%= f.text_field :name %>
-  <%= f.select :catagory, collection: ["breakfast", "lunch"], prompt: "Select the catagory "  %>
+  <%= f.select :category, collection: ["breakfast", "lunch"], prompt: "Select the category "  %>
     <p><%= f.label "Description" %>
     <%= f.text_area :description %>
 
