--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,24 @@
-<h1>Welcome <%= @user.first_name %></h1>
+<style>
+  h1 {
+    text-shadow: 3px 3px hotpink;
+    color:rgba(100, 50, 255, .8);
+    font-family: 'Pacifico';
+    color: #fff400;
+    font-size: 100px;
+  }
+</style>
+
 <h1>Your Recipes</h1>
 
+<center>
 
   <%if @recipes%>
   <% @user_recipes.each do |recipe| %>
   <%= link_to recipe.name, recipe_path(recipe) %>
   <% end %>
 <% end %>
+
+
 
 
 
@@ -19,4 +31,4 @@
   <%= button_to 'Delete this Account', user_path(@user), method: :delete, data: { confirm: 'Are you sure?' } %>
 <% end %>
 
-<%= button_to 'Logout', logout_path, method: :delete %>
+</center>
