--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -10,25 +10,50 @@
 
   -->
 
-
-
-<p>
-  <%= form_for @recipe do |f| %>
-  <%= f.label "Name" %>
-  <%= f.text_field :name %>
-  <%= f.select :category, collection: ["breakfast", "lunch"], prompt: "Select the category "  %>
-    <p><%= f.label "Description" %>
+    <%= form_for @recipe do |f| %>
+    <%= f.label "Name" %>
+    <%= f.text_field :name %>
+    <br>
+    <%= f.label "Description" %>
     <%= f.text_area :description %>
-    <%= f.collection_check_boxes :food_ids, Food.all, :id, :name %>
+      <br>
+      <br>
+  category
+  <%= f.select :category, Category: ["breakfast", "snack", "dinner"], select: "Select" %>
+      <br>
+      <br>
+  <%= f.collection_select :food_ids, Food.all, :id, :name, {include_blank: 'Select an Ingredient'}, {:multiple => true}%>
+  Quanity <%= number_field_tag "amount_1"%>
+  <br>
+  <%= f.collection_select :food_ids, Food.all, :id, :name, {include_blank: 'Select an Ingredient'}, {:multiple => true}%>
+  Quanity<%= number_field_tag "amount_2"%>
+  <br>
 
-      <p>
+  <%= f.collection_select :food_ids, Food.all, :id, :name, {include_blank: 'Select an Ingredient'}, {:multiple => true}%>
+ Quanity   <%= number_field_tag "amount_3"%>
+  <br>
 
-      <%=f.submit%>
+  <%= f.collection_select :food_ids, Food.all, :id, :name, {include_blank: 'Select an Ingredient'}, {:multiple => true}%>
+  Quanity <%= number_field_tag "amount_4"%>
+  <br>
 
-      <%end%>
+  <%= f.collection_select :food_ids, Food.all, :id, :name, {include_blank: 'Select an Ingredient'}, {:multiple => true}%>
+  Quanity <%= number_field_tag "amount_5"%>
 
 
-</div>
+
+  <br>
+
+  <br>
+
+    <br>
+
+
+  <%= submit_tag "Submit"%>
+<%end%>
+
+
+
 
 <style>
 input[type=text] {
