--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -15,7 +15,10 @@ Sign-Up
 <% end %>
 <br>
 <br>
-
-  Already a Member of the KOOL CLUB?
-  <p><%= button_to "Login", login_path, method: :get %></p>
 </div>
+
+<p class="rainbow">
+Already a Member of the K.O.ol CLUB?
+</p>
+<p><%= button_to "Login", login_path, method: :get %></p>
+
