--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -1,8 +1,7 @@
-h1{
-    color:rgba(100, 50, 255, .8);
+div.rainbow {
     font-family: 'Pacifico';
-    color: #212121;
     text-align: center;
+    font-size: 40px;
 }
 h4{
     text-align: center;
@@ -10,5 +9,18 @@ h4{
 }
 
 div.form {
+    text-align: center;
+}
+p {
+    text-align: center;
+}
+h1.recipe {
+    text-shadow: 3px 3px hotpink;
+    font-family: 'Pacifico';
+    color: yellow;
+    font-size: 90px;
+    text-align: center;
+  }
+div {
     text-align: center;
 }
