--- a/app/views/recipes/budget.html.erb
+++ b/app/views/recipes/budget.html.erb
@@ -1,27 +1,32 @@
-<center>
-<h1>Menu</h1>
-
 <% if flash[:notice] %>
-  <p><%= flash[:notice] %></p>
+  <h4><%= flash[:notice] %></h4>
 <% end %>
 
-<h4>Your Recipes: </h4>
+<h3>Selected Recipes:</h3>
 
 <ol>
   <% @items.each do |item| %>
-    <li class="cart"><%= item.name %></li>
+    <li><%= item.name %></li>
+     $ <%= item.total_price.to_f %>
+     <%= button_to "Delete From Cart", "/cart", {method: :delete, params: {recipe_id: item.id} } %>
   <% end %>
 </ol>
 
 
+<% @items.each do |item| %>
+<% counter = 0 %>
+<% item.total_price += counter %>
+<%= counter %>
+<% end %>
+
+
 <hr>
 
-<% @recipes.each do |recipe| %>
+<ol>
+<% @recipes.map do |recipe| %>
 
-    <li class="cart">
-      <%= link_to recipe.name, recipe_path(recipe) %>
-      $<%= recipe.total_price %>
-      <%= button_to "Add To Budget", "/cart", {method: :patch, params: {recipe_id: recipe.id} }%>
-    </li>
+  <p class="cart"><%= link_to recipe.name, recipe_path(recipe) %></p>
+  <p class="cart">$<%= recipe.total_price %></p>
+  <p class="cart"><%= button_to "Add To Budget", "/cart", {method: :patch, params: {recipe_id: recipe.id, search: recipe.total_price} }%></p>
 <% end %>
-</center>
+</ol>
