--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -1,23 +1,21 @@
-<center>
 <% if flash[:notice] %>
-  <h3><%=flash[:notice]%></h3>
+  <h4 class="flash"><%=flash[:notice]%></h4>
 <%end%>
 
 
 <div>
-
-
-
-<%= form_for @recipe do |f| %>
-        <%= f.label "Name" %>
-        <%= f.text_field :name %>
-        <p><%= f.label "Description" %>
-        <%= f.text_area :description %><p>
-       <%= f.collection_check_boxes :food_ids, Food.all, :id, :name %>
-       <p>
-          <%= f.submit %>
-<% end %>
-
+  <%= form_for @recipe do |f| %>
+    <p class="rainbow"><%= f.label "Name" %></p>
+    <p><%= f.text_field :name %></p>
+    <br>
+    <p class="rainbow"><%= f.label "Category" %></p>
+    <p><%= f.select :category, collection: ["breakfast", "lunch"], prompt: "Select the category "  %></p>
+    <br>
+    <p class="rainbow"><%= f.label "Instructions" %></p>
+    <p><%= f.text_area :description %></p>
+    <p><%= f.collection_check_boxes :food_ids, Food.all, :id, :name %></p>
+    <%=f.submit%>
+  <%end%>
 </div>
 
 <style>
@@ -26,6 +24,3 @@ input[type=text] {
   border-radius: 4px;
 }
 </style>
-
-
-</center>
