--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,16 +1,14 @@
 <center>
-
-<h4 class="title">Budget:</h4>
+<h3 class="rainbow">Budget Calculator:</h3> Enter your budget
     <%=form_tag budget_path, method: :get do %>
         <%=number_field_tag(:search, params[:search])%>
         <%=submit_tag "Submit"%>
     <%end%>
 
 <br>
-<h1>List of all Recipes:</h1>
-<% @recipes.each do |recipe| %>
-<%=link_to recipe.name, "/recipes/#{recipe.id}" %>
-<p>
-<%end%>
 
+<h1 class="rainbow">List of all Recipes:</h1>
+<% @recipes.each do |recipe| %>
+<p><%=link_to recipe.name, "/recipes/#{recipe.id}" %></p>
+<%end%>
 </center>
