--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,52 +1,38 @@
 <%if @recipe.gluten? %>
-<% @recipe.gluten?.each do |food|%>
+  <% @recipe.gluten?.each do |food|%>
   <% @gluten_foods << food.name %>
   <%end%>
-  <%end%>
+<%end%>
+<div>
+<p class="rainbow">Recipe Name</p>
+<p><%=@recipe.name %></p>
 
-  <center>
+<p class="rainbow">Recipe Description</p>
+<p><%=@recipe.description %></p>
 
-RECIPE NAME
-<%=@recipe.name %>
-<p>
-RECIPE INSTRUCTIONS
-<%=@recipe.description %>
-<p>
-RECIPE Category
+<p class="rainbow">Recipe Category</p>
 <%=@recipe.category%>
-<P>
-total price
-<%="$#{@recipe.total_price.round(2)}"%>
-<P>
-total protien
-<%=@recipe.total_protein %> grams
-<P>
-total calories
-<%=@recipe.total_calories %>
-<p>
-Ingredients
-<%=@recipe.foods.map {|food| food.name}.join(", ")%>
 
-<p>
+<p class="rainbow">Recipe Price</p>
+<p><%="$#{@recipe.total_price.round(2)}"%></p>
+
+<p class="rainbow">Recipe Protein</p>
+<p><%=@recipe.total_protein %> grams</p>
+
+<p class="rainbow">Recipe Calories</p>
+<p><%=@recipe.total_calories %></p>
+
+<p class="rainbow">Recipe Ingredients</p>
+<p><%=@recipe.foods.map {|food| food.name}.join(", ")%></p>
+
 <% if @gluten_foods.length > 0 %>
 <p class="rainbow"> <%= "WARNING I CONTAIN GLUTEN" %></p>
 <font color="red", size=10><%= "#{@gluten_foods.join(", ")}" %></font>
   <% end %>
 
+<p>Created by: <%= @recipe.user.username %></p>
 
-<P>
-
-
-
-Created by: <%= @recipe.user.username %>
-
-
-
-</h2>
-<p>
 <button type="button" class="btn btn-warning"><%= button_to "edit", "/recipes/#{@recipe.id}/edit",  method: :get %></button>
-<p>
 
 <button type="button" class="btn btn-danger"><%= button_to "delete", recipe_path,  method: :delete %></button>
-
-</center>
+</div>
