--- a/app/views/foods/show.html.erb
+++ b/app/views/foods/show.html.erb
@@ -1,13 +1,13 @@
-<h2 class="rainbow"><%=@food.name %></h2>
+<h2 ><%=@food.name %></h2>
 <br>
 
-<h5 class="rainbow">Price</h5>
+<h5 >Price</h5>
 <p><%=@food.price %></p>
 
-<h5 class="rainbow">Protein</h5>
+<h5 >Protein</h5>
 <p><%=@food.protein %></p>
 
-<h5 class="rainbow">Calories</h5>
+<h5 >Calories</h5>
 <p><%=@food.calories %></p>
 <h5 class="rainbow">Contains Gluten?</h5>
 <p><%=@food.gluten %></p>
