--- a/app/views/recipes/budget.html.erb
+++ b/app/views/recipes/budget.html.erb
@@ -2,7 +2,9 @@
   <h4><%= flash[:notice] %></h4>
 <% end %>
 
-<h3>Selected Recipes:</h3>
+<h1 class="recipe">
+Selected Recipes:
+</h1>
 
 <ol>
   <% @items.each do |item| %>
