fixed user show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,9 +2,10 @@
 
 
 <div>
-<%if @recipes%>
+<%if @user_recipes.length > 0%>
   <% @user_recipes.each do |recipe| %>
   <%= link_to recipe.name, recipe_path(recipe) %>
+  <br>
   <% end %>
 <% end %>
 <br><br><br>
