got cart working

--- a/app/views/foods/edit.html.erb
+++ b/app/views/foods/edit.html.erb
@@ -3,20 +3,25 @@
 <%end%>
 
 <%=form_for @food do |f|%>
-name
-<%=f.text_field :name%>
-<p>
-price
-<%=f.number_field :price, class: :text_field, step: :any%>
-<p>
-protein
-<%=f.number_field :protein%>
-<p>
-calories
-<%=f.number_field :calories%>
-<p>
-contains gluten?
-<%=f.check_box :gluten%>
-<p>
-<%=f.submit "Update Ingredient"%>
+<p>Name</p>
+<p><%=f.text_field :name%></p>
+<p>Price</p>
+<p><%=f.number_field :price, class: :text_field, step: :any%></p>
+<p>Protein</p>
+<p><%=f.number_field :protein%></p>
+<p>Calories</p>
+<p><%=f.number_field :calories%></p>
+<p>Contains Gluten? <%=f.check_box :gluten%></p>
+<br>
+<p><%=f.submit "Create Ingredient"%></p>
 <%end%>
+
+<style>
+input[type=text] {
+  border: 2px solid red;
+  border-radius: 4px;
+}
+input[type='checkbox']{
+  outline: 3px solid red;
+}
+</style>
