--- a/app/views/foods/edit.html.erb
+++ b/app/views/foods/edit.html.erb
@@ -13,7 +13,7 @@
 <p><%=f.number_field :calories%></p>
 <p>Contains Gluten? <%=f.check_box :gluten%></p>
 <br>
-<p><%=f.submit "Create Ingredient"%></p>
+<p><%=f.submit "Update Ingredient"%></p>
 <%end%>
 
 <style>
