--- a/app/views/welcome.html.erb
+++ b/app/views/welcome.html.erb
@@ -1,3 +1,5 @@
+<center>
+
 <style>
   h1 {
     text-shadow: 3px 3px pink;
@@ -10,7 +12,6 @@
 <br>
 <h1><font color=#fff400>Welcome to the Recipe Maker</h1>
 
-<center>
 
 
 
@@ -21,3 +22,4 @@
 <div id="locator2">
 <%= image_tag "ko.png" %>
 </div>
+</center>
